feat: add delete chapter endpoint
