# cmd/api/routes.go
@@ -38,6 +38,7 @@ func (app *application) routes() http.Handler {
 	router.HandlerFunc(http.MethodPost, "/v1/chapters", app.requireActivatedUser(app.createChapterHandler))
 	router.HandlerFunc(http.MethodGet, "/v1/chapters/:id", app.getChapterByIDHandler)
 	router.HandlerFunc(http.MethodPatch, "/v1/chapters/:id", app.requireActivatedUser(app.updateChapterHandler))
+	router.HandlerFunc(http.MethodDelete, "/v1/chapters/:id", app.requireActivatedUser(app.deleteChapterHandler))
 
 	return app.authenticate(router)
 }
